--- a/Week1_Questionnaire/assets/assets/main.css
+++ b/Week1_Questionnaire/assets/assets/main.css
@@ -3,7 +3,6 @@ a {
   font-size: 20px
 }
 
-
 body {
   background-image: url("https://media.idownloadblog.com/wp-content/uploads/2016/02/Firewatch-Wallpaper-desktop-2560x1440-green.jpg");
   background-position: center;
@@ -33,3 +32,56 @@ li {
   padding: 10px;
 }
 
+pre {
+color: white;
+font-size: 20px;
+}
+
+/*Musical Genre*/
+
+.edm {
+  background: linear-gradient(270deg, #ff00f5, #ffd736, #f2a4ff, #6bf51d, #06e854);
+  background-size: 1000% 1000%;
+
+  padding: 10px;
+  margin: 5px;
+
+  -webkit-animation: slideBackground 2s ease infinite;
+  -moz-animation: slideBackground 2s ease infinite;
+  animation: slideBackground 2s ease infinite;
+}
+
+.rock {
+  background: -webkit-linear-gradient(orange, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.8s ease;
+}
+
+.rap{
+  font-size: 30px;
+  font-weight: 400;
+
+  background-color: skyblue;
+  border-radius: 30%;
+  color: white;
+  margin: 10px;
+}
+
+    @-webkit-keyframes slideBackground {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    @-moz-keyframes slideBackground {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+    @keyframes slideBackground {
+        0%{background-position:0% 50%}
+        50%{background-position:100% 50%}
+        100%{background-position:0% 50%}
+    }
+}
+}
