--- a/Week1_Questionnaire/assets/assets/main.css
+++ b/Week1_Questionnaire/assets/assets/main.css
@@ -52,6 +52,7 @@ font-size: 20px;
 }
 
 .rock {
+  background-clip: text;
   background: -webkit-linear-gradient(orange, red);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
