--- a/Week3_Colophon/assets/main.css
+++ b/Week3_Colophon/assets/main.css
@@ -20,10 +20,14 @@ body {
     margin: 0.5%;
 }
 
+section {
+    display: flex;
+  }
+
 h1 {
     margin:0px;
     font-size: 300%;
-    line-height: 250%;
+    line-height: 260%;
     color: white;
 
     text-align: center;
@@ -32,6 +36,7 @@ h1 {
   }
 
 article {
+    flex: 1;
     padding: 0px;
     margin: 0px;
 
@@ -39,18 +44,31 @@ article {
     border-bottom: 5px dashed white;
   }
 
+  article:nth-of-type(1) 
+  div:nth-child(3), 
+  div:nth-child(4) {
+    position: relative;
+    bottom: 0px;
+    border-top: 5px dashed white;
+  }
+
+  article:nth-of-type(1)
+  div:nth-child(4) {
+    margin-bottom: 0;
+  }
+
   article:nth-of-type(2) {
     border-left: 5px dashed white;
   }
 
-  article:nth-of-type(3) div:first-child {
+  article:nth-of-type(2) div:first-child {
     border-bottom: 5px dashed white;
   }
 
 p {
     margin: 20px 30px;
     max-width: 90%;
-    line-height: 200%;
+    line-height: 180%;
 
 }
 
@@ -60,31 +78,8 @@ a {
 }
 
 .space {
-    margin: 200px 10px;
+    margin: 300px 10px;
     text-align: center;
     font-size: 400%;
 }
 
-  /* Flex */
-
-  section {
-    display: flex;
-  }
-
-  article {
-    flex: 1 200px;
-  }
-
-  article:nth-of-type(3) {
-    flex: 3 200px;
-    display: flex;
-    flex-flow: column;
-  }
-
-  article:nth-of-type(3) div:first-child {
-    flex: 1 100px;
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: space-around;
-  }
