--- a/Week3_Colophon/assets/main.css
+++ b/Week3_Colophon/assets/main.css
@@ -4,7 +4,7 @@
 @font-face {
     font-family: 'BIOS';
     src: url('fonts/Web437_IBM_BIOS.woff') format('woff'),
-        url('fonts/Ac437_IBM_BIOS.ttf') format('ttf')
+    url('fonts/Ac437_IBM_BIOS.ttf') format('ttf')
 }
 
 /* Page */
@@ -24,14 +24,9 @@ section {
     display: flex;
   }
 
+/* Borders */
+
 h1 {
-    margin:0px;
-    font-size: 300%;
-    line-height: 260%;
-    color: white;
-
-    text-align: center;
-
     border-bottom: 5px dashed white;
   }
 
@@ -65,21 +60,78 @@ article {
     border-bottom: 5px dashed white;
   }
 
+  /* Text Deco */
+
+h1 {
+    margin:0px;
+    font-size: 300%;
+    line-height: 260%;
+    color: white;
+
+    text-align: center;
+}
+
 p {
     margin: 20px 30px;
     max-width: 90%;
     line-height: 180%;
-
 }
+
+/* Links */
 
 a {
     text-decoration: none;
     color: white;
 }
 
-.space {
-    margin: 300px 10px;
-    text-align: center;
-    font-size: 400%;
+a:hover {
+    background: linear-gradient(270deg, red, yellow, #6bf51d, deepskyblue, magenta);
+    background-size: 1000% 1000%;
+    background-clip: text;
+
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-animation: slideBackground 2s ease infinite;
+    -moz-animation: slideBackground 2s ease infinite;
+    animation: slideBackground 2s ease infinite;
 }
 
+/* ?!.:' */
+
+.space {
+    margin: 100px 10px;
+    line-height: 150%;
+    text-align: center;
+    font-size: 1000%;
+}
+
+article:nth-of-type(1)
+div:nth-child(2):hover {
+  background: linear-gradient(270deg, red, yellow, #6bf51d, deepskyblue, magenta);
+  background-size: 1000% 1000%;
+  background-clip: text;
+
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-animation: slideBackground 2s ease infinite;
+  -moz-animation: slideBackground 2s ease infinite;
+  animation: slideBackground 2s ease infinite;
+}
+
+/* Webkits */
+
+@-webkit-keyframes slideBackground {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes slideBackground {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes slideBackground {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
