--- a/Week3_Colophon/assets/main.css
+++ b/Week3_Colophon/assets/main.css
@@ -118,6 +118,19 @@ div:nth-child(2):hover {
   animation: slideBackground 2s ease infinite;
 }
 
+/* Mobile */
+
+@media (max-width:1000px) {
+  section {
+    flex-direction: column;
+  }
+
+  article:nth-of-type(2) {
+    border-top: 0px;
+    border-left: 0px;
+  }
+}
+
 /* Webkits */
 
 @-webkit-keyframes slideBackground {
