--- a/assets/main.css
+++ b/assets/main.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'BIOS';
-    src: url('Web437_IBM_BIOS.woff') format('woff'),
+    src: url('fonts/Web437_IBM_BIOS.woff') format('woff'),
 }
 
 /* Page */
@@ -25,12 +25,19 @@ section {
     margin: 30px;
 }
 
+article {
+    font-family: 'BIOS';    
+    border-top: 10px dashed white;
+    flex-direction: column;
+}
+
 a {
+    font-family: 'BIOS';
+    margin: 0;
     text-decoration: none;
     color: white;
     line-height: 170%;
-    
-    border-top: 10px dashed white;
+    border-bottom: 10px dashed white;
 }
 
 pre {
