--- a/Week3_Colophon/assets/main.css
+++ b/Week3_Colophon/assets/main.css
@@ -4,7 +4,7 @@
 @font-face {
     font-family: 'BIOS';
     src: url('../../assets/fonts/Web437_IBM_BIOS.woff') format('woff'),
-    url('../../assets/fonts/Ac437_IBM_BIOS.ttf') format('ttf')
+    url('../../assets/fonts/Ac437_IBM_BIOS.ttf') format('ttf');
 }
 
 /* Page */
