--- a/Project1/assets/main.css
+++ b/Project1/assets/main.css
@@ -20,9 +20,6 @@ body {
     margin: 0.5%;
 }
 
-section {
-  }
-
   article {
     justify-content: center;
     display: flex;
@@ -31,13 +28,16 @@ section {
     
   }
 
-  article:nth-of-type(2) {
-  }
-
   
 p {
   text-align: center;
+  line-height: 180%;
 }
+
+#door {
+color: red;
+}
+
 
 .mid {
   margin: 37% 1% 0%;
