--- a/Project1/question/main.css
+++ b/Project1/question/main.css
@@ -15,3 +15,22 @@ html {
     color: white;
     font-size: 17px;
 }
+
+#typewriter-box {
+    font-family: 'BIOS';
+    color: white;
+    background-color: black;
+    width: 100%;
+    margin:0;
+  }
+  
+  .typewriter-letter {
+    animation: fadeIn 30ms calc(calc(1ms * var(--delay)) * var(--pos)) ease-in forwards;
+    opacity:0.01;
+  }
+  
+  @keyframes fadeIn {
+    0% { opacity: 0.1; }
+    100% { opacity: 1; }
+  }
+  
