--- a/Week3_Colophon/assets/main.css
+++ b/Week3_Colophon/assets/main.css
@@ -99,7 +99,7 @@ a:hover {
 #typewriter-box {
   font-family: 'BIOS';
   color: white;
-  background-color: black;
+  line-height: 180%;
   width: 100%;
   margin:0;
 }
