--- a/Project1/greathall/main.css
+++ b/Project1/greathall/main.css
@@ -1,23 +1,19 @@
 /* Font */
 
 @font-face {
-    font-family: 'BIOS';
-    src: url('../../assets/fonts/Web437_IBM_BIOS.woff') format('woff'),
-    url('../../assets/fonts/Ac437_IBM_BIOS.ttf') format('ttf');
+  font-family: 'BIOS';
+  src: url('../../../assets/fonts/Web437_IBM_BIOS.woff') format('woff'),
+    url('../../../assets/fonts/Ac437_IBM_BIOS.ttf') format('ttf');
 }
 
 /* Page */
 
 html {
-    font-family: 'BIOS';
-    background-color: black;
-    color: white;
-    font-size: 17px;
-    margin: 2%;
-}
-
-body {
-  margin: 0.5%;
+  font-family: 'BIOS';
+  background-color: black;
+  color: white;
+  font-size: 17px;
+  margin: 2%;
 }
 
 article {
@@ -25,18 +21,19 @@ article {
   display: flex;
   flex-direction: row;
   position: relative;
-  
 }
-  
+
 h1 {
-  font-size:30px;
+  font-size: 30px;
   color: red;
   text-align: center;
 }
+
 a {
   text-decoration: none;
   color: white;
 }
+
 p {
   text-align: center;
   line-height: 180%;
@@ -52,22 +49,8 @@ p {
   transition: transform 200ms ease-in-out;
 }
 
-#door, #door2 {
-  opacity: 0%;
-}
-
 .mid {
   margin: 24rem 1rem 0rem 1rem;
-}
-
-.visible {
-  opacity: 100% !important;
-}
-
-.knob {
-  position: absolute;
-  margin: 10%;
-  font-size: 700%;
 }
 
 .chat {
@@ -76,11 +59,10 @@ p {
   left: 0rem;
   right: 0rem;
   bottom: 0rem;
-
   background-color: #222;
 }
 
 .chat p {
   text-align: left;
-  margin:0 0.5rem;
+  margin: 0 0.5rem;
 }
