--- a/Project1/assets/main.css
+++ b/Project1/assets/main.css
@@ -1,19 +1,19 @@
 /* Font */
 
 @font-face {
-    font-family: 'BIOS';
-    src: url('../../assets/fonts/Web437_IBM_BIOS.woff') format('woff'),
+  font-family: 'BIOS';
+  src: url('../../assets/fonts/Web437_IBM_BIOS.woff') format('woff'),
     url('../../assets/fonts/Ac437_IBM_BIOS.ttf') format('ttf');
 }
 
 /* Page */
 
 html {
-    font-family: 'BIOS';
-    background-color: black;
-    color: white;
-    font-size: 17px;
-    margin: 2%;
+  font-family: 'BIOS';
+  background-color: black;
+  color: white;
+  font-size: 17px;
+  margin: 2%;
 }
 
 body {
@@ -25,18 +25,20 @@ article {
   display: flex;
   flex-direction: row;
   position: relative;
-  
+
 }
-  
+
 h1 {
-  font-size:30px;
+  font-size: 30px;
   color: red;
   text-align: center;
 }
+
 a {
   text-decoration: none;
   color: white;
 }
+
 p {
   text-align: center;
   line-height: 180%;
@@ -52,7 +54,8 @@ p {
   transition: transform 200ms ease-in-out;
 }
 
-#door, #door2 {
+#door,
+#door2 {
   opacity: 0%;
 }
 
@@ -82,5 +85,5 @@ p {
 
 .chat p {
   text-align: left;
-  margin:0 0.5rem;
+  margin: 0 0.5rem;
 }
