--- a/Project1/ending/main.css
+++ b/Project1/ending/main.css
@@ -11,14 +11,24 @@
 
 html {
     font-family: 'BIOS';
-    background-color: black;
-    color: white;
-    font-size: 17px;
+    background-color: white;
+    color: black;
+    font-size: 30px;
+}
+
+h1 {
+  margin: 0 2em;
+  line-height: 2em;
+  font-size: 400px;
+}
+h2 {
+  margin: 0 2em;
+  font-size: 400px;
 }
 
 #typewriter-box {
     font-family: 'BIOS';
-    color: white;
+    color: black;
     line-height: 180%;
     width: 100%;
     margin:0;
