--- a/Project1/exclamation/main.css
+++ b/Project1/exclamation/main.css
@@ -1,19 +1,18 @@
-
 /* Font */
 
 @font-face {
-    font-family: 'BIOS';
-    src: url('../../assets/fonts/Web437_IBM_BIOS.woff') format('woff'),
+  font-family: 'BIOS';
+  src: url('../../assets/fonts/Web437_IBM_BIOS.woff') format('woff'),
     url('../../assets/fonts/Ac437_IBM_BIOS.ttf') format('ttf');
 }
 
 /* Page */
 
 html {
-    font-family: 'BIOS';
-    background-color: black;
-    color: white;
-    font-size: 17px;
+  font-family: 'BIOS';
+  background-color: black;
+  color: white;
+  font-size: 17px;
 }
 
 article:first-of-type {
@@ -23,67 +22,74 @@ article:first-of-type {
 }
 
 h1 {
-  font-size:30px;
+  font-size: 30px;
   color: red;
   text-align: center;
 }
+
 a {
   text-decoration: none;
   color: white;
 }
+
 p {
   text-align: left;
-  line-height: 180%;
+  line-height: 370%;
 }
 
 
 #typewriter-box {
-    font-family: 'BIOS';
-    color: white;
-    line-height: 180%;
-    width: 100%;
-  }
-  
-  .typewriter-letter {
-    animation: fadeIn 30ms calc(calc(1ms * var(--delay)) * var(--pos)) ease-in forwards;
-    opacity:0.01;
-  }
-  
-  @keyframes fadeIn {
-    0% { opacity: 0.1; }
-    100% { opacity: 1; }
-  }
-  
-  .chat {
-    padding: 1rem 0;
-    position: fixed;
-    left: 0rem;
-    right: 0rem;
-    bottom: 0rem;
-  
-    background-color: #222;
-  }
-  
-  .chat p {
-    text-align: left;
-    margin:0 0.5rem;
-    line-height: 130%;
+  font-family: 'BIOS';
+  color: white;
+  line-height: 180%;
+  width: 100%;
+}
+
+.typewriter-letter {
+  animation: fadeIn 30ms calc(calc(1ms * var(--delay)) * var(--pos)) ease-in forwards;
+  opacity: 0.01;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0.1;
   }
 
-#door {
-    display: inline-block;
-    margin: 0;
-    transform-origin: 0;
-    transition: transform 50ms 50ms ease-in-out;
+  100% {
+    opacity: 1;
   }
+}
+
+.chat {
+  padding: 1rem 0;
+  position: fixed;
+  left: 0rem;
+  right: 0rem;
+  bottom: 0rem;
+
+  background-color: #222;
+}
+
+.chat p {
+  text-align: left;
+  margin: 0 0.5rem;
+  line-height: 130%;
+}
+
+#door {
+  display: inline-block;
+  margin: 0;
+  transform-origin: 0;
+  transition: transform 50ms 50ms ease-in-out;
+}
 
 article:nth-of-type(2) div:first-of-type {
   display: inline-block;
   margin: auto;
   box-shadow: 2em 0 4em 1px goldenrod;
 }
-  
+
 #door:hover {
-    transform: rotateY(30deg);
-    transition: transform 200ms ease-in-out;
-  }
+  transform: rotateY(30deg);
+  transition: transform 200ms ease-in-out;
+}
