--- a/Project1/guardroom/main.css
+++ b/Project1/guardroom/main.css
@@ -21,6 +21,11 @@ h1 {
   text-align: center;
 }
 
+article {
+  display: flex;
+  justify-content: center;
+}
+
 a {
   text-decoration: none;
   color: white;
