--- a/Project1/question/main.css
+++ b/Project1/question/main.css
@@ -62,6 +62,7 @@ pre {
 .chat {
   padding: 1rem 0;
   position: fixed;
+  z-index: 3;
   left: 0rem;
   right: 0rem;
   bottom: 0rem;
@@ -80,8 +81,19 @@ pre {
 }
 
 #door {
+  position: relative;
+  z-index: 1;
   transform-origin: 0;
   transition: transform 50ms 50ms ease-in-out;
+}
+
+.back {
+  z-index: 0;
+  position: fixed;
+  color: #0d0d0d;
+  top: -0.5em;
+  font-size: 150px;
+  line-height: 1.5em;
 }
 
 #door:hover {
