--- a/Project1/colons/main.css
+++ b/Project1/colons/main.css
@@ -36,6 +36,8 @@ p {
 }
 
 #door {
+  position: relative;
+  z-index: 1;
   display: inline-block;
   margin: 0;
   transform-origin: 0;
@@ -48,6 +50,8 @@ p {
 }
 
 #typewriter-box {
+  position: relative;
+  z-index: 1;
   font-family: 'BIOS';
   margin: 0;
   color: white;
@@ -61,6 +65,7 @@ p {
 }
 
 .chat {
+  z-index: 3;
   padding: 1rem 0;
   position: fixed;
   left: 0rem;
@@ -84,4 +89,28 @@ p {
   100% {
     opacity: 1;
   }
+}
+
+.back {
+  z-index: 0;
+  text-align: left;
+  position: fixed;
+  color: #0d0d0d;
+  top: -0.5em;
+  font-size: 150px;
+  line-height: 1.5em;
+}
+
+@media (max-width:700px) {
+  article {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .chat {
+    font-size: 15px;
+  }
+  #typewriter-box {
+    font-size: 15px;
+  }
+  
 }
