--- a/Project1/guardroom/main.css
+++ b/Project1/guardroom/main.css
@@ -90,3 +90,20 @@ pre {
   transform: rotateY(30deg);
   transition: transform 200ms ease-in-out;
 }
+
+@media (max-width:700px) {
+  article {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .chat {
+    font-size: 15px;
+  }
+  #typewriter-box {
+    margin: 0 1em;
+    font-size: 15px;
+  }
+  #door2:first-child {
+    color: #333;
+  }
+}
