--- a/Project1/periods/main.css
+++ b/Project1/periods/main.css
@@ -21,6 +21,8 @@ body {
 }
 
 h1 {
+  position: relative;
+  z-index: 1;
   font-size: 30px;
   color: red;
   text-align: center;
@@ -41,6 +43,8 @@ p {
 }
 
 #door {
+  position: relative;
+  z-index: 1;
   display: inline-block;
   margin: 1em 8em;
   transform-origin: 0;
@@ -53,6 +57,8 @@ p {
 }
 
 #typewriter-box {
+  position: relative;
+  z-index: 1;
   font-family: 'BIOS';
   margin: 0;
   color: white;
@@ -66,6 +72,7 @@ p {
 }
 
 .chat {
+  z-index: 3;
   padding: 1rem 0;
   position: fixed;
   left: 0rem;
@@ -91,3 +98,25 @@ p {
   }
 }
   
+.back {
+  z-index: 0;
+  position: fixed;
+  color: #0d0d0d;
+  top: -0.5em;
+  font-size: 150px;
+  line-height: 1.5em;
+}
+
+@media (max-width:700px) {
+  article {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .chat {
+    font-size: 15px;
+  }
+  #typewriter-box {
+    font-size: 15px;
+  }
+  
+}
