--- a/Project1/greathall/main.css
+++ b/Project1/greathall/main.css
@@ -66,3 +66,29 @@ p {
   text-align: left;
   margin: 0 0.5rem;
 }
+
+@media (max-width:700px) {
+  article {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .mid {
+    margin: 0;
+  }
+
+  #door,
+  #door2 {
+    margin: 0 20%;
+  }
+
+  #door {
+    margin-top: 10%;
+    
+    margin-bottom: 10%;
+  }
+
+  .chat {
+    font-size: 15px;
+  }
+}
