--- a/Project1/quotation/main.css
+++ b/Project1/quotation/main.css
@@ -84,9 +84,10 @@ pre {
 
 #typewriter-box {
   font-family: 'BIOS';
+  font-size: 23px;
   text-align: center;
   color: white;
-  line-height: 180%;
+  line-height: 200%;
   width: 100%;
   margin: 0;
 }
@@ -107,8 +108,6 @@ pre {
 }
 
 @media (max-width:700px) {
-  article {
-  }
   .chat {
     font-size: 15px;
   }
