--- a/Week5_Table/f/main.css
+++ b/Week5_Table/f/main.css
@@ -24,47 +24,60 @@ html {
     color: white;
     font-size: 110px;
     font-weight: 100;
-    margin: 0.5%;
+    margin: 8vw 1vw;
 }
 
 /* Text */
 h1,
 h2,
 h3,
-h4 {
+h4 { 
+    border-bottom: 2px solid #333;
     font-weight: 130;
-    line-height: 10vw;
+    line-height: 5vw;
     letter-spacing: 3vw;
-    margin: 4vw 0;
+    margin: 7vw 0;
 }
 
 h1 {
-    margin: 10vw 1px;
-    font-weight: 700;
-    font-size: 400px;
-    letter-spacing: 12px;
+    border-top: 2px solid yellowgreen;
+    margin-top: 8vw;
+    font-weight: 500;
+    font-size: 500px;
+    letter-spacing: 1px;
     
 }
 
 h2, h3 {
     font-family: 'Outward';
     text-align: right;
-    font-size: 400px;
+    font-size: 340px;
     letter-spacing: 0.5px;
-    margin: 6vw 0;
+    margin: 7vw 5vw 6vw ;
     color: yellowgreen;
 }
+ h3 {
+    margin-bottom: 12vw;
+ }
+
 
 h4 {
     text-align: right;
     font-size: 200px;
-    line-height: 11vw;
     letter-spacing: 1px;
     color: yellowgreen;
 }
 
 p { 
+    font-size: 95px;
     border-bottom: 2px solid yellowgreen;
     line-height: 6vw;
     letter-spacing: 3px;
+}
+
+P:hover {
+    font-size: 100px;
+    letter-spacing: 3.5px;
+    border-bottom: 2px solid yellow;
+    transition: 300ms ease-in-out;
 }
