--- a/Week5_Table/e/main.css
+++ b/Week5_Table/e/main.css
@@ -2,17 +2,17 @@
 
 @font-face {
     font-family: 'Outward';
-    src: url('../../assets/fonts/outward-block-webfont.woff') format('woff');
+    src: url('../fonts/outward-block-webfont.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Outward-Border';
-    src: url('../../assets/fonts/outward-borders-webfont.woff') format('woff');
+    src: url('../fonts/outward-borders-webfont.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Outward-Round';
-    src: url('../../assets/fonts/outward-round-webfont.woff') format('woff');
+    src: url('../fonts/outward-round-webfont.woff') format('woff');
 }
 
 /* Page */
