--- a/Project1/assets/main.css
+++ b/Project1/assets/main.css
@@ -37,6 +37,7 @@ h1 {
 a {
   text-decoration: none;
   color: white;
+  cursor:default;
 }
 
 p {
@@ -69,6 +70,7 @@ p {
 
 .knob {
   position: absolute;
+  cursor: pointer;
   margin: 10%;
   font-size: 700%;
 }
