--- a/assets/main.css
+++ b/assets/main.css
@@ -12,7 +12,7 @@ html {
     font-family: 'BIOS';
     background-color: black;
     color: white;
-    font-size: 50px;
+    font-size: 45px;
 }
 
 body {
@@ -26,8 +26,13 @@ section {
 }
 
 article {  
-    border-top: 10px dashed white;
     flex-direction: column;
+    border-top: 10px dashed white;
+}
+
+article:nth-of-type(3) {
+    font-size: 70px;
+    text-align: right;
 }
 
 /* Text */
